--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 	<h1>GIT урок2</h1>
 	<p>новое изменение файла index.html</p>
+	<p>some text</p>
+	<p>la la la</p>
 </body>
 </html>
