--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 
 </head>
 <body>
-	<h1>GIT урок2</h1>
-	<p>новое изменение файла index.html</p>
-	<p>some text</p>
-	<p>la la la</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, iusto debitis repellat ab nostrum veritatis sequi harum delectus explicabo suscipit.</p>
 </body>
 </html>
